--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -2,7 +2,6 @@
   width: 21px;
   height: 18px;
   background: transparent url('../../../images/like-inactive.svg') no-repeat;
-  
   background-size: 21px 18px;
   border: none;
   cursor: pointer;
@@ -17,4 +16,18 @@
 
 .card__like-button:hover {
   opacity: 0.6;
+}
+.card__like-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
+}
+.card__like-count {
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+  color: #000;
+  line-height: 1;
+  text-align: center;
 }
