--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -13,7 +13,14 @@
   transition: visibility 0s, background 0.3s;
   margin-top: 48px;
 }
-
+.popup__button_disabled {
+  background: rgb(255, 255, 255);;
+  color: rgba(0, 0, 0, .2);
+  cursor: default;
+  pointer-events: none;
+  transition: background 0.3s;
+  border: 1px solid rgba(0, 0, 0, .2);
+}
 .popup__button:hover {
   background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
