--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -8,6 +8,37 @@
   background-position: center;
   margin: 0 29px 0 0;
 }
+.profile__avatar-container {
+  position: relative;
+  display: inline-block;
+}
+
+.profile__avatar-edit {
+  position: absolute;
+  bottom: 1px;
+  width: 120px;
+  height: 120px;
+  background: #000 url('../../../images/edit-icon.svg') center no-repeat;
+  border-radius: 50%;
+  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+
+.profile__avatar-container:hover .profile__avatar-edit {
+  opacity: 0.7;
+  pointer-events: auto;
+}
+
+.profile__avatar-edit:hover {
+  opacity: 1;
+}
 
 @media screen and (max-width: 740px) {
   .profile__image {
