--- a/src/blocks/popup/__input/popup__input-error.css
+++ b/src/blocks/popup/__input/popup__input-error.css
@@ -1,5 +1,5 @@
 .popup__input-error {
-  color: #f00; /* красный цвет */
+  color: #f00; 
   font-size: 12px;
   line-height: 15px;
   min-height: 15px;
